k8s/istio/virtual-service-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gaamingzhang-blog-external
  namespace: default
spec:
  hosts:
  - "blog.local"
  - "*"
  gateways:
  - gaamingzhang-blog-gateway
  http:
  - route:
    - destination:
        host: gaamingzhang-blog-service
        subset: stable
      weight: 100
    - destination:
        host: gaamingzhang-blog-service
        subset: canary
      weight: 0
