k8s/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gaamingzhang-blog
  namespace: default
spec:
  hosts:
  - "gaamingzhang-blog-service"
  http:
  - route:
    - destination:
        host: gaamingzhang-blog-service
        subset: stable
      weight: 100
    - destination:
        host: gaamingzhang-blog-service
        subset: canary
      weight: 0
